--- a/B3/P2-L3.md
+++ b/B3/P2-L3.md
@@ -19,7 +19,7 @@ Modifica solo la línea que contenga las iniciales de tus apellidos y tu nombre.
 | O. J. JOSE IGNACIO | <!--enlace-->                                                           |
 | P. P. ELISA | <!--enlace-->                                                           |
 | P. G. INÉS | [https://github.com/inesprados/practicas-ISE/blob/main/P2-L3-resultados.md](https://github.com/inesprados/practicas-ISE/blob/main/P2-L3-resultados.md)                                                           |
-| Q. P. ANDREA KUNPING | <!--enlace-->                                                           |
+| Q. P. ANDREA KUNPING | [https://github.com/akqp2104/practicas-ISE/blob/main/P2-L3-resultados.md](https://github.com/akqp2104/practicas-ISE/blob/main/P2-L3-resultados.md)                                                           |
 | R. S. ALEJANDRO | <!--enlace-->                                                           |
 | S. M. M. FRANCISCO | <!--enlace-->                                                           |
 | V. B. JOSE ANDRES | <!--enlace-->                                                           |
